--- a/geyser-plugin-grpc/Cargo.toml
+++ b/geyser-plugin-grpc/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0.67"
 solana-geyser-plugin-interface = "=1.9.13"
 solana-logger = "=1.9.13"
 solana-metrics = "=1.9.13"
+solana-program = "=1.9.13"
 solana-sdk = "=1.9.13"
 
 tonic = "0.6"
