--- a/geyser-plugin-grpc/Cargo.toml
+++ b/geyser-plugin-grpc/Cargo.toml
@@ -18,10 +18,10 @@ serde = "1.0.130"
 serde_derive = "1.0.103"
 serde_json = "1.0.67"
 
-solana-geyser-plugin-interface = { path = "../../geyser-plugin-interface" }
-solana-logger = { path = "../../logger" }
-solana-metrics = { path = "../../metrics" }
-solana-sdk = { path = "../../sdk" }
+solana-geyser-plugin-interface = "~1.13"
+solana-logger = "~1.13"
+solana-metrics = "~1.13"
+solana-sdk = "~1.13"
 
 tonic = "0.6"
 prost = "0.9"
