--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,10 +11,10 @@ edition = "2021"
 jsonrpc-core = "18.0.0"
 jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }
 
-solana-rpc = { path = "../../rpc" }
-solana-client = { path = "../../client" }
-solana-account-decoder = { path = "../../account-decoder" }
-solana-sdk = { path = "../../sdk" }
+solana-rpc = "~1.13"
+solana-client = "~1.13"
+solana-account-decoder = "~1.13"
+solana-sdk = "~1.13"
 
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
