--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-        "geyser-plugin-grpc",
-        "lib",
+        "client",
+        "server",
 ]
 
 [patch.crates-io]
