--- a/geyser-plugin-grpc/Cargo.toml
+++ b/geyser-plugin-grpc/Cargo.toml
@@ -18,10 +18,10 @@ serde = "1.0.130"
 serde_derive = "1.0.103"
 serde_json = "1.0.67"
 
-solana-geyser-plugin-interface = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "v1.14" }
-solana-logger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "v1.14" }
-solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "v1.14" }
-solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "v1.14" }
+solana-geyser-plugin-interface = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "seg/v1.14-backport" }
+solana-logger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "seg/v1.14-backport" }
+solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "seg/v1.14-backport" }
+solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "seg/v1.14-backport" }
 
 tonic = "0.6"
 prost = "0.9"
